Prevent clicking behind zoom images.

--- a/assets/styles/partials/_base.scss
+++ b/assets/styles/partials/_base.scss
@@ -128,7 +128,10 @@ body {
 	// Zoom overrides.
 	#ZoomImage { box-shadow: initial !important; }
 
-	&:has(> #ZoomBox[style*="visible"]) #Box { opacity: $opacity--slight } // Dim content.
+	&:has(> #ZoomBox[style*="visible"]) #Box {
+		opacity:        $opacity--slight; // Dim content.
+		pointer-events: none;
+	}
 }
 
 :root:has(> body > #ZoomBox[style*="visible"]) { overflow: hidden; } // Freeze scrolling.
